--- a/website/index.html
+++ b/website/index.html
@@ -63,7 +63,24 @@
             </div>
         </header>
         <main id="content" class="main">
-            <div class="first-banner">
+            <div class="info-sec-1">
+                <img src="images/desola-lanre-ologun-7d4LREDSPyQ-unsplash (2).jpg">
+                <h3>Finish strong this semester with a bang!</h3>
+            </div>
+            <div class="input">
+                <input id="search" placeholder="Find solutions to your homework...">
+               <!-- <div class="search-icon-container-helper">   -->
+                    <div class="search-icon-container">
+                        <a>
+                            <span class="material-symbols-outlined eyeglass">
+                                search
+                            </span>
+                        </a>
+                    </div>
+               <!-- </div> -->
+            </div>
+            <div class="info-sec-2">
+                <h3>Access course specific content, materials, and resources.</h3>
                 <a>learn more</a>
             </div>
         </main>
