--- a/website/index.html
+++ b/website/index.html
@@ -36,6 +36,27 @@
                 </div>
                 <div class="hide-section-links">
                     <p>Courses</p>
+                    <button id="courseActionButton" onclick="courseAction()">
+                        <span class="material-symbols-outlined">
+                            chevron_right
+                        </span>
+                    </button>
+                    <button id="courseActionButtonDown" onclick="courseActionClose()">
+                        <span class="material-symbols-outlined">
+                            expand_more
+                        </span>
+                    </button>
+                </div>
+                <div id="course-vid1" class="hide-section-links course">
+                    <p style="padding-left: 20px;">Accounting</p>
+                    <a href="#">
+                        <span class="material-symbols-outlined">
+                            chevron_right
+                            </span>
+                    </a>
+                </div>
+                <div id="course-vid2" class="hide-section-links course">
+                    <p style="padding-left: 20px;">Statistics</p>
                     <a href="#">
                         <span class="material-symbols-outlined">
                             chevron_right
@@ -83,6 +104,104 @@
                 <h3>Access course specific content, materials, and resources.</h3>
                 <a>learn more</a>
             </div>
+            <div class="banner">
+                <img src="images/learn-faster-banner.png">
+            </div>
+            <div class="info-sec-3">
+                <h4>Here for every moment</h4>
+                <div class="homework-help">
+                    <img src="images/homework-help-4.png">
+                    <h4>Homework help</h4>
+                    <p>Step-by-step explanations, expert Q&A sessions, and additional resources</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div class="exam-prep-and-practice">
+                    <img src="images/exam-prep-and-practice.png">
+                    <h4>Exam prep & practice</h4>
+                    <p>Discover areas of weakness and enhance your test-taking abilities with practice exams</p>
+                    <a href="#">Learn more</a>
+                </div>
+                <div class="understand-a-topic">
+                    <img src="images/understand-a-topic.png">
+                    <h4>Understand a topic</h4>
+                    <p>Simplify the toughest concepts with digestible topic breakdowns & videos</p>
+                    <a href="#">Learn more</a>
+                </div>
+            </div>
+
+
+            <div class="info-sec-4">
+                <p>Sign up for free!</p>
+                <a href="#">Sign Up</a>
+            </div>
+
+
+
+            <div class="footer">
+                <div class="footer-1">
+                    <div class="pre-footer-section-info">
+                        <p>Company</p>
+                        <button onclick="down()" id="pre_f_s_b_more" class="pre-footer-section-button">
+                            <span class="material-symbols-outlined">
+                                expand_more
+                            </span>
+                        </button>
+                        <button onclick="up()" id="pref_s_b_less" class="pre-f-s-b-less">
+                            <span class="material-symbols-outlined">
+                                expand_less
+                            </span>
+                        </button>
+                    </div>
+                    <div id="c_f_i" class="company-footer-info">
+                        <p>About QUIX</p>
+                        <p>Jobs</p>
+                    </div>
+                    <div class="pre-footer-section-info">
+                        <p>Customer Service</p>
+                        <button id="d1-buttonOne" onclick="downOne()" class="pre-footer-section-button">
+                            <span class="material-symbols-outlined">
+                                expand_more
+                            </span>
+                        </button>
+                        <button onclick="upOne()" id="pref-f-s-b-lessTwo" class="pre-f-s-b-less2">
+                            <span class="material-symbols-outlined">
+                                expand_less
+                            </span>
+                        </button>
+                    </div>
+                    <div id="c_s_i" class="customer-service-info">
+                        <p>Give Us Feedback</p>
+                        <p>Customer Service</p>
+                    </div>
+                </div>
+                <div class="footer">
+                    <div class="last">
+                        <div class="las_las">
+                            <a>Cookie Notice</a>
+                        </div>
+                        <div class="las_las">
+                            <a>Your Privacy Choices</a>
+                        </div>
+                        <div class="las_las">
+                            <a>Privacy Policy</a>
+                        </div>
+                        <div class="las_las">
+                            <a>Honor Code</a>
+                        </div>
+                        <div class="las_las">
+                            <a>IP Rights</a>
+                        </div>
+                        <div class="las_las">
+                            <a>General Policies</a>
+                        </div>
+                    </div>
+                    <div class="copyright-info">
+                        <p>&copy;2023 QUIX Inc. All rights reserved.</p>
+                    </div>
+                </div>
+            </div>
+
+
         </main>
     </div>
 </body>
